--- a/index.html
+++ b/index.html
@@ -120,45 +120,47 @@
     <!-- Navbar End -->
 
     <!-- Carousel Start -->
-    <section class="headerstart">
-        <div class="container-fluid p-0">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/full-shot-smiley-students-library.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+    <section id="header">
+        <div class="container">
+            <div class="container-fluid p-0">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/full-shot-smiley-students-library.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Welcome To Mtendere</h2>
+                                <p>Study Abroad</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/study-group-african-people.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Welcome To Mtendere</h2>
-                            <p>Study Abroad</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/study-group-african-people.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
         </div>
     </section>
@@ -836,8 +838,55 @@
                     <div class="field textarea">
                         <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
                     </div>
-                    <div class="field">
+                    <div class="field" data-toggle="modal" data-target="#myModal">
                         <button type="submit"><a href="chat.html">Chat</a></button>
+                    </div>
+                    <!-- Modal -->
+                    <div id="myModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                    
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <header>
+                                <div>
+                                    <h2>JavaScript ChatBot</h2>
+                                    <p class="typing">bot is typing. . .</p>
+                                </div>
+                                <div id="toogle-chat">
+                                    <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png" class="suggest-chat">
+                                </div>
+                            </header>
+                            <main>
+                            </main>
+                            <div class="main-background">
+                                <div>
+                                    <h3>JavaScript ChatBot</h3>
+                                    <p>Click on Top Right button to view all available chats.</p>
+                                </div>
+                            </div>
+                            <section class="all-questions">
+                                <h2>Suggested Chats</h2>
+                                <div class="questions container"></div>
+                            </section>
+                        
+                            <!-- Footer Start -->
+                            <footer>
+                                <form id="chat-form">
+                                    <input type="text" class="chat-input" required>
+                                    <button type="submit" class="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24">
+                                            <path
+                                                d="M24 0l-6 22-8.129-7.239 7.802-8.234-10.458 7.227-7.215-1.754 24-12zm-15 16.668v7.332l3.258-4.431-3.258-2.901z" />
+                                        </svg>
+                                    </button>
+                                </form>
+                            </footer>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
