--- a/index.html
+++ b/index.html
@@ -121,45 +121,54 @@
 
     <!-- Carousel Start -->
     <section id="header">
-        <div class="container">
-            <div class="container-fluid p-0">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/full-shot-smiley-students-library.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Welcome To Mtendere</h2>
-                                <p>Study Abroad</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/study-group-african-people.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
-                        </div>
+        <div class="container-fluid p-0">
+            <div class="owl-carousel">
+                <div class="carousel-item active">
+                    <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" alt="placeholder" title="carousel1" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Welcome to MTENDERE Education Consultancy</h3>
+                        <p>We provide unparalleled education and career guidance to our students.</p>
+                        <a href="about.html" class="btn btn-primary">Learn More</a>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                </div>
+            </div>
+            <div class="owl-carousel"> 
+                <div class="carousel-item">
+                    <img src="img/group-two-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" alt="placeholder" title="carousel2" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>We Help You Choose the Right Course</h3>
+                        <p>Our expertly curated programs cater to your specific needs and interests.</p>
+                        <a href="course.html" class="btn btn-primary">View Programs</a>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel">
+                <div class="carousel-item">
+                    <img src="img/group-three-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" alt="placeholder" title="carousel3" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Get the Best Career Guidance</h3>
+                        <p>Our expert counselors will help you make the right career choices.</p>
+                        <a href="services.html" class="btn btn-primary">Our Services</a>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel">
+                <div class="carousel-item">
+                    <img src="img/group-four-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" alt="placeholder" title="carousel4" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Enhance Your Academic Performance</h3>
+                        <p>Our expert teachers, tutors, and counselors will help you achieve your academic goals.</p>
+                        <a href="services.html" class="btn btn-primary">Our Services</a>
+                    </div>
+                </div>
+            </div>
+            <div class="next">
+                <i class="fa fa-angle-right"></i>
+                <i class="fa fa-angle-left"></i>
+                <div class="owl-dots"></div>
+                <div class="owl-nav">
+                    <div class="owl-prev"></div>
+                    <div class="owl-next"></div>
                 </div>
             </div>
         </div>
