--- a/index.html
+++ b/index.html
@@ -124,12 +124,11 @@
         <div class="container-fluid p-0">
             <div class="owl-carousel">
                 <div class="carousel-item active">
-                    <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" alt="placeholder" title="carousel1" />
+                    <img src="img/group-one-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" alt="placeholder" title="carousel1" />
                     <div class="carousel-caption d-none d-md-block">
-                        <h3>Welcome to MTENDERE Education Consultancy</h3>
-                        <p>We provide unparalleled education and career guidance to our students.</p>
-                        <a href="about.html" class="btn btn-primary">Learn More</a>
-                    </div>
+                        <h3>Discover Our Diverse Universities</h3>
+                        <p>We have a wide range of educational institutions in Africa.</p>
+                        <a href="universities.html" class="btn btn-primary">View Universities</a>
                 </div>
             </div>
             <div class="owl-carousel"> 
@@ -858,49 +857,51 @@
 
     <!-- Modal -->
     <!-- Modal -->
-    <section id="myModal">
-        <div class="modal-sm" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <div class="header-modal">
-                    <div>
-                        <h2>JavaScript ChatBot</h2>
-                        <p class="typing">bot is typing. . .</p>
+    <section id="chatbox" class="ai">    
+        <div id="myModal">
+            <div class="modal-sm" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <div class="header-modal">
+                        <div>
+                            <h2>JavaScript ChatBot</h2>
+                            <p class="typing">bot is typing. . .</p>
+                        </div>
+                        <div id="toogle-chat">
+                            <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png" class="suggest-chat">
+                        </div>
                     </div>
-                    <div id="toogle-chat">
-                        <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png" class="suggest-chat">
+                    <div class="main-modal">
                     </div>
-                </div>
-                <dic class="main-modal">
-                </main>
-                <div class="main-background">
-                    <div>
-                        <h3>JavaScript ChatBot</h3>
-                        <p>Click on Top Right button to view all available chats.</p>
+                    <div class="main-background">
+                        <div>
+                            <h3>JavaScript ChatBot</h3>
+                            <p>Click on Top Right button to view all available chats.</p>
+                        </div>
                     </div>
-                </div>
-                <section class="all-questions">
-                    <h2>Suggested Chats</h2>
-                    <div class="questions container"></div>
-                </section>
-            
-                <!-- Footer Start -->
-                <div class="footer-modal">
-                    <form id="chat-form">
-                        <input type="text" class="chat-input" required>
-                        <button type="submit" class="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M24 0l-6 22-8.129-7.239 7.802-8.234-10.458 7.227-7.215-1.754 24-12zm-15 16.668v7.332l3.258-4.431-3.258-2.901z" />
-                            </svg>
-                        </button>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <section class="all-questions">
+                        <h2>Suggested Chats</h2>
+                        <div class="questions container"></div>
+                    </section>
+                
+                    <!-- Footer Start -->
+                    <div class="footer-modal">
+                        <form id="chat-form">
+                            <input type="text" class="chat-input" required>
+                            <button type="submit" class="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M24 0l-6 22-8.129-7.239 7.802-8.234-10.458 7.227-7.215-1.754 24-12zm-15 16.668v7.332l3.258-4.431-3.258-2.901z" />
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
