--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <!-- list item -->
         <div class="list">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="img/students-talking-after-class.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="img/young-adults-meeting-up-study.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="img/students-talking-after-class.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -180,7 +180,7 @@
         <!-- list thumnail -->
         <div class="thumbnail">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="img/students-talking-after-class.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -191,7 +191,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="img/students-talking-after-class.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -202,7 +202,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="img/study-group-african-people.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -213,7 +213,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="img/study-group-african-people.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
